# libera-lab

./: .gitignore  .gitmodules  .mailmap  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSING.md  LiberaApp.cpp  LiberaApp.h  LiberaFileDialog.h  LiberaFileDialog_macos.mm  LiberaFileDialog_other.cpp  LiberaPluginsWindow.cpp  LiberaPluginsWindow.h  OscilloscopeWindow.cpp  OscilloscopeWindow.h  README.md  THIRD_PARTY_NOTICES.md  main.cpp
.github/workflows/: build.yml
cmake/: Info.plist.in
fonts/: ForkAwesome.cpp  RobotoBold.cpp  RobotoMedium.cpp
icons/: build-icons.sh  libera-lab.icns  libera-lab.rc
